# rustjshtmlnotesapp

./: .env  Cargo.toml  diesel.toml
src/: main.rs
src/controllers/: bookscontroller.rs  mod.rs  userscontroller.rs
src/models/: book.rs  user.rs
src/templates/: register.html
